--- a/oldworks/index.html
+++ b/oldworks/index.html
@@ -19,7 +19,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, pre, a, em, fo
 <!--大盒子-->
 <div class="bigbox">
   <p>&nbsp;</p>
-  <p><img src="workimages/contact.gif" width="200" height="110" alt="我的联系方式" /></p>
+  <p><img src="contact.gif" width="200" height="110" alt="我的联系方式" /></p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
   <p>以下内容按时间顺序（2009-2002）倒序列出，包含一些程序系统、图片、界面、动画、网站、壁纸，恕不一一作解：</p>
