--- a/index.html
+++ b/index.html
@@ -1,1 +1,26 @@
-guojikai homepage
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta charset="utf-8" />
+<style type="text/css">
+/* 浏览器重置 */
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, pre, a, em, font, img, strong, dl, dt, dd, ol, ul, li, fieldset, form, label, table, tr, th, td { margin: 0; padding: 0; border: 0; outline: 0; color: #404040; font-family: Tahoma, Geneva, sans-serif; font-size: 14px; vertical-align: baseline; line-height: 20px; }
+.f_red { color: #f00; }
+.none { display: none; }
+/* 双重包装 */
+.bigbox { width: 80%; margin: 12px; background: #fff; border-right: dashed 1px #ccc; padding-right: 20px; }
+.smallbox { margin: 12px 0; }
+  .smallbox p { font-size: 12px; }
+  .smallbox img { border: solid 1px #ccc; padding: 5px; margin: 10px 0; }
+</style>
+<title>Guo Jikai</title>
+</head>
+<body>
+<!--大盒子-->
+<div class="bigbox">
+<a href="./oldworks/">old works</a> <a href="./2you/">2you</a>
+</div>
+</body>
+</html>
+
+
