--- a/oldworks/index.html
+++ b/oldworks/index.html
@@ -22,7 +22,7 @@ html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, pre, a, em, fo
   <p><img src="contact.gif" width="200" height="110" alt="我的联系方式" /></p>
   <p>&nbsp;</p>
   <p>&nbsp;</p>
-  <p>以下内容按时间顺序（2009-2002）倒序列出，包含一些程序系统、图片、界面、动画、网站、壁纸，恕不一一作解：</p>
+  <p>以下内容按时间顺序（2009-2002）倒序列出，包含一些程序系统、图片、界面、动画、网站、壁纸等：</p>
   <div class="smallbox">
     <p><img src="workimages/2009_01.gif" width="400" height="969" /></p>
     <p><img src="workimages/2008_05.gif" width="550" height="356" /></p>
