--- a/vpn/usage.html
+++ b/vpn/usage.html
@@ -21,8 +21,8 @@ Remarks: 墙头跳舞
 </div>
 <h2>客户端</h2>
 <div>
-    <a href="./Shadowsocks-win-3.3.6.exe">Windows 客户端</a><br />
-    <a href="./ShadowsocksX-mac-2.6.3.dmg">Mac 客户端</a> <br />
+    <a href="./downloads/Shadowsocks-win-3.3.6.exe">Windows 客户端</a><br />
+    <a href="./downloads/ShadowsocksX-mac-2.6.3.dmg">Mac 客户端</a> <br />
 IPhone： 进入 App Store 搜索 shadowsocks，下载那个免费的 SSVPN，点击上面的“+”号，照着下图填写。<br />
 <img src="./images/ios_001.jpg" alt="" /><br />
 <img src="./images/ios_002.jpg" alt="" /><br />
