--- a/vpn/index.html
+++ b/vpn/index.html
@@ -26,7 +26,11 @@ Linode 2048, 24GB DISK, 1 CPU Core, 2TB XFER （Tokyo 2, JP）
 </div>
 <h2>约束</h2>
 <div>
-因为是自架的服务器，就几个朋友，所以没有任何速度和设备数量的限制，唯一的约束是：请勿分享给别人使用，自己用用就可以了。希望成员多照顾别人的利益。
+因为是自架的服务器，就几个朋友，所以没有任何速度和设备数量的限制，唯一的约束是：请勿分享给别人使用，自己用用就可以了。希望成员多照顾别人的利益。另外，本方案不欢迎以下类型成员加入：
+    <ul>
+        <li>有强烈的政治倾向和政治目的；</li>
+        <li>其他可能有损其他成员利益的行为。</li>
+    </ul>
 </div>
 <h2>使用方法</h2>
 <div>
