--- a/vpn/index.html
+++ b/vpn/index.html
@@ -23,6 +23,7 @@
 <br >
 服务器参数：
 Linode 2048, 24GB DISK, 1 CPU Core, 2TB XFER （Tokyo 2, JP）
+服务器启用日期： 2016/12/8，截至日期为2017/12/7。
 </div>
 <h2>约束</h2>
 <div>
