--- a/vpn/index.html
+++ b/vpn/index.html
@@ -22,8 +22,8 @@
 使用的是 linode 最便宜的方案 $10/Mo，折人民币 826元/年（16/12/08）,初定150元一人，人数限制6人以内（包括我自己）直接打到我微信即可，人少了你们不用补钱。达到6人便不会加新人了。
 <br >
 服务器参数：
-Linode 2048, 24GB DISK, 1 CPU Core, 2TB XFER （Tokyo 2, JP）
-服务器启用日期： 2016/12/8，截至日期为2017/12/7。
+Linode 2048, 24GB DISK, 1 CPU Core, 2TB XFER （Tokyo 2, JP）<br />
+服务器启用日期： 2016/12/7，截至日期为2017/12/6。
 </div>
 <h2>约束</h2>
 <div>
