--- a/vpn/index.html
+++ b/vpn/index.html
@@ -7,7 +7,7 @@
 <body>
 <h1>墙头跳舞</h1>
 <hr />
-<h2><font color="red">注意</font></h2>
+<h2><font color="red">注意(已满员)</font></h2>
 <div>目前网络上有免费的解决方案，有此需求的请自行百度。除非有十分迫切的需求（如工作和学习需要等），否则我不建议加入此方案。请有意向加入的朋友谨慎考虑，确定加入后微信上联系我。</div>
 <h2>说明</h2>
 <div>这是个内部使用的梯子，因为长期折腾也累了，连花了钱的都不稳定，没口碑的不敢买，有口碑的又被和谐，所以打算自架服务器，自架的优点如下：
